# Canna_LoRA

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  config.yaml.example  config_loader.py  data_loader.py  dataquality.py  generated_prompt.py  hf_integration.py  pyproject.toml  requirements.txt  science_training_data.json  setup.py  syntheticdatageneration_openai.py  train.py
